--- a/styles/style.css
+++ b/styles/style.css
@@ -68,15 +68,27 @@ p {
 .projects-section__heading {
   font-size: 3.6rem;
   font-weight: 500;
+  transform: translateY(-65px);
 }
 
 .projects-section__header-img {
   width: 100%;
 }
 
+.projects-section__phones{
+position: absolute;
+left: -10px;
+}
 .projects-section__phone{
 position: absolute;
-left: 0;
+}
+.projects-section__phone-1{
+position: absolute;
+transform:rotate(15deg);
+}
+.projects-section__phone-2{
+position: absolute;
+transform:rotate(30deg);
 }
 
 .project_section__showcase {
@@ -96,8 +108,6 @@ left: 0;
   right: 0;
 }
 
-.project_section__showcase-content {
-}
 .showcase-content__main-content{
   display: flex;
 align-items: center;
