--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,8 @@ header {
 .hero__text-wrapper {
   position: absolute;
   width: 33.3%;
+  font-size: 3rem;
+
 }
 
 .text-wrapper__name {
@@ -24,6 +26,22 @@ header {
 .text-wrapper__heading {
   font-size: 7rem;
   font-weight: 400;
+    /* animation: heading 2s 1; */
+}
+
+.bicycle{
+  position: absolute;
+  right: 0;
+  top: 50px;
+  filter: var(--main-drop-shadow);
+}
+
+.radio{
+  position: absolute;
+  bottom:0;
+  left: 0;
+  transform: translateX(-575px);
+  filter: var(--main-drop-shadow);
 }
 
 .coffe-bean {
@@ -32,7 +50,7 @@ header {
   bottom: 50px;
   animation: bean 3s infinite;
   transform: translateY(50px);
-  filter: drop-shadow(10px 40px 30px rgba(0, 0, 0, 0.75));
+  filter: var(--main-drop-shadow);
 }
 
 main {
@@ -52,6 +70,7 @@ p {
   font-size: 1.8rem;
   font-weight: 400;
   margin-bottom: 25px;
+  position: relative;
 }
 
 .about-section__heading {
@@ -68,7 +87,7 @@ p {
 .projects-section__heading {
   font-size: 3.6rem;
   font-weight: 500;
-  transform: translateY(-65px);
+  margin-top: -40px;
 }
 
 .projects-section__header-img {
