--- a/styles/style.css
+++ b/styles/style.css
@@ -4,11 +4,10 @@ header {
   align-items: center;
   justify-content: center;
   background-color: #a1bbc7;
-}
-
-.hero__img {
-  max-height: 660px;
-  max-width: 100%;
+  background-image: url(../img/head-left2.jpg), url(../img/head-right2.jpg);
+  background-repeat: no-repeat;
+  background-position: left, right;
+  height: 660px;
 }
 
 .hero__text-wrapper {
@@ -143,10 +142,11 @@ justify-content: center;
 }
 
 .showcase-content__img {
-  width: 50%;
+  width: 100%;
 }
 
 .contact-section__heading{
   font-size: 3.6rem;
   font-weight: 500;
+  text-align: center;
 }
