--- a/styles/modal.css
+++ b/styles/modal.css
@@ -1,38 +1,56 @@
 /* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
+  display: flex;
+    visibility: hidden;
+  opacity: 0;
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  /* padding-top: 100px; Location of the box */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 33%; /* Full width */
+  height: 25%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  transition: 500ms;
+  overflow: hidden;
 }
 
 /* Modal Content */
 .modal-content {
-  background-color: #fefefe;
+  position: relative;
+  background-color: #fff;
   margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
+  padding: 50px;
+  border-radius: 4px;
+  box-shadow: 0 0 20px 0 #33333394;
+  width: 50%;
+  text-align: center;
+}
+
+.modal-img{
+  width: 100%;
+  max-width: 720px;
 }
 
 /* The Close Button */
 .close {
-  color: #aaaaaa;
+  position: absolute;
+  top: 5px;
+  right: 35px;
+  color: #a1bbc7;
   float: right;
-  font-size: 28px;
+  font-size: 35px;
   font-weight: bold;
 }
 
 .close:hover,
 .close:focus {
-  color: #000;
+  color: #1B4356;
   text-decoration: none;
   cursor: pointer;
 }
