--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -1,4 +1,4 @@
-::root{
+:root{
 
 --main-drop-shadow: drop-shadow(10px 40px 30px rgba(0, 0, 0, 0.75));
 }
@@ -23,4 +23,14 @@ ul, ol{
 
 a{
     text-decoration: none;
+}
+
+footer{
+    box-sizing: border-box;
+    height: 40px;
+    width: 100%;
+    background-color: #a1bbc7;
+    text-align: center;
+    font-size: 1.5rem;
+    padding: 10px;
 }
