--- a/styles/modal.css
+++ b/styles/modal.css
@@ -1,7 +1,7 @@
 /* The Modal (background) */
 .modal {
+  visibility: hidden;
   display: flex;
-    visibility: hidden;
   opacity: 0;
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -31,7 +31,7 @@
   text-align: center;
 }
 
-.modal-content__modal-img{
+.modal-content__modal-img {
   width: 100%;
   max-width: 720px;
 }
@@ -49,7 +49,7 @@
 
 .close:hover,
 .close:focus {
-  color: #1B4356;
+  color: #1b4356;
   text-decoration: none;
   cursor: pointer;
 }
