--- a/styles/contact-form.css
+++ b/styles/contact-form.css
@@ -1,20 +1,35 @@
+/* Add a background color and some padding around the form */
+.contact-form {
+  border-radius: 5px;
+  font-size: 1.8rem;
+}
+
 /* Style inputs with type="text", select elements and textareas */
-input[type="text"],
-select,
-textarea {
+.contact-form__input[type="text"],
+.contact-form__select,
+.contact-form__textarea {
   width: 100%; /* Full width */
   padding: 12px; /* Some padding */
-  border: 1px solid #ccc; /* Gray border */
+  border: 1px solid #a1bbc7; /* Gray border */
   border-radius: 4px; /* Rounded borders */
   box-sizing: border-box; /* Make sure that padding and width stays in place */
   margin-top: 6px; /* Add a top margin */
   margin-bottom: 16px; /* Bottom margin */
   resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+  box-shadow: 0 2px 6px 0 #a1bbc7 inset;
+  transition: 100ms;
+}
+
+.contact-form__input[type="text"]:focus,
+.contact-form__select:focus,
+.contact-form__textarea:focus {
+  outline: none;
+  border-bottom: 2px solid #1B4356;
 }
 
 /* Style the submit button with a specific background color etc */
 button[type="submit"] {
-  background-color: #4caf50;
+  background-color: rgba(27, 67, 86, 0.75);
   color: white;
   padding: 12px 20px;
   border: none;
@@ -24,12 +39,9 @@ button[type="submit"] {
 
 /* When moving the mouse over the submit button, add a darker green color */
 button[type="submit"]:hover {
-  background-color: #45a049;
+  background-color: #1B4356;
 }
-
-/* Add a background color and some padding around the form */
-.container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
+button[type="submit"]:focus {
+  background-color: #1B4356;
+  border-radius: 4px;
 }
