--- a/styles/queries.css
+++ b/styles/queries.css
@@ -7,6 +7,19 @@
   }
 
   .text-wrapper__heading {
-    font-size: 3rem;
+    font-size: 4.6rem;
+  }
+
+  .about-section{
+    margin-top: -25px;
+  }
+
+  .about-section__heading{
+    font-size: 2.6rem;
+  }
+
+  .projects-section__heading{
+    font-size: 2.6rem;
+    margin-top: -28px;
   }
 }
