--- a/styles/modal.css
+++ b/styles/modal.css
@@ -2,6 +2,8 @@
 .modal {
   visibility: hidden;
   display: flex;
+  align-items: center;
+  justify-content: center;
   opacity: 0;
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -37,19 +39,40 @@
 }
 
 /* The Close Button */
-.close {
-  position: absolute;
-  top: 5px;
-  right: 35px;
+.modal-content__close {
   color: #a1bbc7;
-  float: right;
   font-size: 35px;
   font-weight: bold;
+  text-align: right;
 }
 
-.close:hover,
-.close:focus {
+.modal-content__close-button:hover,
+.modal-content__close-button:focus {
   color: #1b4356;
   text-decoration: none;
   cursor: pointer;
 }
+
+
+  .modal-content__header { grid-area: header; }
+  .modal-content__close { grid-area: close; }
+  .modal-content__img { grid-area: img; 
+    width: 100%;
+  max-width: 720px;}
+  .modal-content__slides { grid-area: slides; 
+    width: 100%;
+  max-width: 720px;}
+  .modal-content__text { grid-area: text; }
+  
+  .modal__grid {
+    display: grid;
+    grid-template-areas:
+      'header header header header close'
+      ' img img img img slides'
+      ' text text text text text';
+    grid-gap: 10px;
+    background-color: #fff;
+    padding: 10px;
+    width: 50%;
+  }
+
