--- a/styles/style.css
+++ b/styles/style.css
@@ -106,10 +106,6 @@ p {
 }
 
 .about-section__heading {
-  /* position: sticky;
-  position: -webkit-sticky;
-  top: 0;
-  z-index: 4; */
   font-size: 3.6rem;
   font-weight: 500;
   margin-top: 0;
@@ -123,10 +119,6 @@ p {
 }
 
 .projects-section__heading {
-  /* position: sticky;
-  position: -webkit-sticky;
-  top: 0;
-  z-index: 4; */
   font-size: 3.6rem;
   font-weight: 500;
   margin-top: -40px;
@@ -144,7 +136,7 @@ p {
 .projects-section__phone {
   position: absolute;
   width: 35%;
-  filter: drop-shadow(10px 40px 30px rgba(26, 16, 12, 0.65));
+  /* filter: drop-shadow(10px 40px 30px rgba(26, 16, 12, 0.65)); */
 }
 
 .projects_section__showcase {
