--- a/styles/modal.css
+++ b/styles/modal.css
@@ -7,7 +7,6 @@
   opacity: 0;
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
-  /* padding-top: 100px; Location of the box */
   left: 0;
   top: 0;
   right: 0;
@@ -33,9 +32,16 @@
   text-align: center;
 }
 
-.modal-content__modal-img {
-  width: 100%;
-  max-width: 720px;
+.modal-content__header {
+  grid-area: header;
+  font-size: 1.8rem;
+  font-weight: 500;
+  margin-bottom: 0;
+}
+
+.modal-content__img {
+  grid-area: img;
+  width: 500px;
 }
 
 /* The Close Button */
@@ -44,6 +50,7 @@
   font-size: 35px;
   font-weight: bold;
   text-align: right;
+  grid-area: close;
 }
 
 .modal-content__close-button:hover,
@@ -53,26 +60,31 @@
   cursor: pointer;
 }
 
+.modal-content__slide {
+  grid-area: slides;
+  width: 100%;
+  max-width: 220px;
+  transition: 400ms;
+  cursor: pointer;
+}
 
-  .modal-content__header { grid-area: header; }
-  .modal-content__close { grid-area: close; }
-  .modal-content__img { grid-area: img; 
-    width: 100%;
-  max-width: 720px;}
-  .modal-content__slides { grid-area: slides; 
-    width: 100%;
-  max-width: 720px;}
-  .modal-content__text { grid-area: text; }
-  
-  .modal__grid {
-    display: grid;
-    grid-template-areas:
-      'header header header header close'
-      ' img img img img slides'
-      ' text text text text text';
-    grid-gap: 10px;
-    background-color: #fff;
-    padding: 10px;
-    width: 50%;
-  }
+img.modal-content__slide:hover {
+  box-shadow: var(--main-box-shadow);
+  transform: scale(1.02); 
+}
 
+.modal-content__text {
+  grid-area: text;
+}
+
+.modal__grid {
+  display: grid;
+  grid-template-areas:
+    "header header header header close"
+    " img img img img slides"
+    " text text text text text";
+  grid-gap: 25px;
+  background-color: #fff;
+  padding: 25px;
+  width: 50%;
+}
