--- a/styles/animations.css
+++ b/styles/animations.css
@@ -9,3 +9,33 @@
       font-size: 7rem;
     }
   }
+
+  /* Fading animation */
+.slide-right {
+  -webkit-animation-name: slide-right;
+  -webkit-animation-duration: .8s;
+  animation-name: slide-right;
+  animation-duration: .8s;
+}
+
+@-webkit-keyframes slide-right {
+  from {
+    opacity: 0;
+    transform: translateX(-250px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes slide-right {
+  from {
+    opacity: 0;
+    transform: translateX(-250px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
