--- a/styles/slider.css
+++ b/styles/slider.css
@@ -1,4 +1,3 @@
-
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
@@ -9,10 +8,21 @@
 /* Hide the images by default */
 .main-content__slide {
   display: none;
+  padding: 15px;
+  width: 100%;
+  box-shadow: none;
+  transition: 400ms;
+}
+
+.main-content__slide:hover {
+  border-radius: 4px;
+  box-shadow: var(--main-box-shadow);
+  transform: scale(1.02);
 }
 
 /* Next & previous buttons */
-.prev, .next {
+.prev,
+.next {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -34,8 +44,9 @@
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* Caption text */
@@ -50,7 +61,7 @@
 }
 
 /* The dots/bullets/indicators */
-.dot-wrapper{
+.dot-wrapper {
   text-align: center;
   padding: 10px 0;
 }
@@ -66,24 +77,8 @@
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.active,
+.dot:hover {
   background-color: #585858;
 }
 
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
