--- a/styles/animations.css
+++ b/styles/animations.css
@@ -10,7 +10,32 @@
     }
   }
 
-  /* Fading animation */
+  /* fadeing animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: .8s;
+  animation-name: fade;
+  animation-duration: .8s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: .2;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fade {
+  from {
+    opacity: .2;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+  /* Slideing animation */
 .slide-right {
   -webkit-animation-name: slide-right;
   -webkit-animation-duration: .8s;
@@ -33,6 +58,35 @@
   from {
     opacity: 0;
     transform: translateX(-250px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.slide-left {
+  -webkit-animation-name: slide-left;
+  -webkit-animation-duration: .8s;
+  animation-name: slide-left;
+  animation-duration: .8s;
+}
+
+@-webkit-keyframes slide-left {
+  from {
+    opacity: 0;
+    transform: translateX(250px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes slide-left {
+  from {
+    opacity: 0;
+    transform: translateX(250px);
   }
   to {
     opacity: 1;
