--- a/styles/style.css
+++ b/styles/style.css
@@ -127,7 +127,6 @@ p {
 .projects-section__phone {
   position: absolute;
   width: 35%;
-  /* filter: drop-shadow(10px 40px 30px rgba(26, 16, 12, 0.65)); */
 }
 
 .projects_section__showcase {
@@ -188,4 +187,9 @@ p {
   font-size: 3.6rem;
   font-weight: 500;
   text-align: center;
+}
+
+.footer__bicycle{
+  width: 50px;
+  float: right;
 }
