--- a/styles/queries.css
+++ b/styles/queries.css
@@ -72,7 +72,7 @@
     display: none;
   }
 
-.project-section__arrow{
+.projects-section__arrow{
   display: none;
 }
 
@@ -93,7 +93,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 15px;
+  margin: 15px 0 0;
 }
 
 .modal-content__text{
