--- a/styles/slider.css
+++ b/styles/slider.css
@@ -26,13 +26,14 @@
   height: 15px;
   width: 15px;
   margin: 5px 10px;
-  background-color: #bbb;
+  background-color: #a1bcc7;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
 }
 
 .active,
-.dot:hover {
-  background-color: #585858;
+.dot-wrapper_dot:hover {
+  background-color: #1B4356;
+  cursor: pointer;
 }
