--- a/styles/contact-form.css
+++ b/styles/contact-form.css
@@ -1,5 +1,6 @@
 /* Add a background color and some padding around the form */
 .contact-form {
+  position: relative;
   border-radius: 5px;
   font-size: 1.8rem;
   margin-bottom: 50px;
@@ -31,7 +32,7 @@
 /* Style the submit button with a specific background color etc */
 button[type="submit"] {
   background-color: #1b4356;
-  color: white;
+  color: rgb(248, 248, 248);
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
@@ -45,4 +46,15 @@ button[type="submit"]:hover {
 button[type="submit"]:focus {
   background-color: #132e3a;
   border-radius: 4px;
+}
+
+.contact-form__letter-illu-wrapper{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 40px;
+}
+
+.contact-form__letter-illu{
+height: 40px;
 }
