--- a/styles/contact-form.css
+++ b/styles/contact-form.css
@@ -11,7 +11,7 @@
 .contact-form__select,
 .contact-form__textarea {
   width: 100%; /* Full width */
-  padding: 12px; /* Some padding */
+  padding: 6px; /* Some padding */
   border: 1px solid #a1bbc7; /* Gray border */
   border-radius: 4px; /* Rounded borders */
   box-sizing: border-box; /* Make sure that padding and width stays in place */
@@ -20,6 +20,7 @@
   resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
   box-shadow: 0 2px 6px 0 #a1bbc7 inset;
   transition: 100ms;
+  font-size: 1.6rem;
 }
 
 .contact-form__input[type="text"]:focus,
@@ -29,10 +30,17 @@
   border-bottom: 2px solid #1b4356;
 }
 
+.contact-form__bottom-row-wrapper{
+display: flex;
+align-items: center;
+justify-content: space-between;
+}
+
 /* Style the submit button with a specific background color etc */
 button[type="submit"] {
   background-color: #1b4356;
   color: rgb(248, 248, 248);
+  font-size: 1.6rem;
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
@@ -48,10 +56,13 @@ button[type="submit"]:focus {
   border-radius: 4px;
 }
 
+.contact-form__text-warning{
+font-size: 1.6rem;
+color: red;
+opacity: 0;
+}
+
 .contact-form__letter-illu-wrapper{
-  position: absolute;
-  bottom: 0;
-  right: 0;
   height: 40px;
 }
 
