--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -75,6 +75,14 @@ a{
     text-decoration: none;
 }
 
+img{
+    border-radius: 4px;
+}
+
+input{
+font-family: 'Mukta', Helvetica, sans serif;
+}
+
 footer{
     position: relative;
     box-sizing: border-box;
@@ -86,6 +94,3 @@ footer{
     margin-top: 75px;
 }
 
-img{
-    border-radius: 4px;
-}
