bit of responsoveness for the contact form

--- a/styles/queries.css
+++ b/styles/queries.css
@@ -1,3 +1,4 @@
+/*----------------------------------- Tables ------------------------------*/
 @media only screen and (min-width: 450px) and (max-width: 1024px) {
   header {
     height: 550px;
@@ -10,28 +11,29 @@
     font-size: 4.6rem;
   }
 
-  .about-section{
+  .about-section {
     margin-top: -25px;
   }
 
-  .about-section__heading{
+  .about-section__heading {
     font-size: 2.6rem;
   }
 
-  .projects-section__heading{
+  .projects-section__heading {
     font-size: 2.6rem;
     margin-top: -28px;
   }
 
-  .modal__grid{
+  .modal__grid {
     width: 80%;
   }
 
-  .contact-section__heading{
+  .contact-section__heading {
     font-size: 2.6rem;
   }
 }
 
+/*------------------------------- Smartphones -----------------------------*/
 @media only screen and (max-width: 450px) {
   header {
     height: 350px;
@@ -39,31 +41,31 @@
   section {
     width: 80%;
   }
-  p{
+  p {
     font-size: 1.4rem;
     line-height: 2rem;
   }
-  footer{
+  footer {
     margin-top: 50px;
   }
 
-  .text-wrapper__name{
+  .text-wrapper__name {
     font-size: 2rem;
   }
-  .text-wrapper__heading{
+  .text-wrapper__heading {
     font-size: 3rem;
   }
 
-  .coffe-bean{
+  .coffe-bean {
     top: 260px;
   }
 
-  .about-section__heading{
+  .about-section__heading {
     font-size: 2.4rem;
     margin-top: 15px;
   }
 
-  .projects-section__heading{
+  .projects-section__heading {
     font-size: 2.4rem;
     margin-top: -25px;
   }
@@ -72,36 +74,50 @@
     display: none;
   }
 
-.projects-section__arrow{
-  display: none;
-}
+  .projects-section__arrow {
+    display: none;
+  }
 
-.modal__grid{
-  display: grid;
-  grid-template-areas:
+  .modal__grid {
+    display: grid;
+    grid-template-areas:
       "header header header header close"
       "img img img img img"
       "slides slides slides slides slides"
       "text text text text text";
-  padding: 0 15px;
-  width: 100%;
-}
+    padding: 0 15px;
+    width: 100%;
+  }
 
-.modal-content__slides-wrapper{
-  grid-area: slides;
-  max-width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 15px 0 0;
-}
+  .modal-content__slides-wrapper {
+    grid-area: slides;
+    max-width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 15px 0 0;
+  }
 
-.modal-content__text{
-margin: 15px 0;
-}
+  .modal-content__text {
+    margin: 15px 0;
+  }
 
-  .contact-section__heading{
+  .contact-section__heading {
     font-size: 2.4rem;
     margin-top: -28px;
+  }
+
+  form > label {
+    font-size: 1.6rem;
+  }
+
+  .contact-form__input[type="text"],
+  .contact-form__select,
+  .contact-form__textarea {
+    font-size: 1.4rem;
+  }
+
+  .contact-form__text-warning {
+    font-size: 1.4rem;
   }
 }
