--- a/styles/contact-form.css
+++ b/styles/contact-form.css
@@ -21,6 +21,7 @@
   box-shadow: 0 2px 6px 0 #a1bbc7 inset;
   transition: 100ms;
   font-size: 1.6rem;
+  color: #1b4356;
 }
 
 .contact-form__input[type="text"]:focus,
@@ -41,7 +42,7 @@ button[type="submit"] {
   background-color: #1b4356;
   color: rgb(248, 248, 248);
   font-size: 1.6rem;
-  padding: 12px 20px;
+  padding: 8px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -59,6 +60,7 @@ button[type="submit"]:focus {
 .contact-form__text-warning{
 font-size: 1.6rem;
 color: red;
+text-align: center;
 opacity: 0;
 }
 
