--- a/styles/queries.css
+++ b/styles/queries.css
@@ -120,4 +120,24 @@
   .contact-form__text-warning {
     font-size: 1.6rem;
   }
+
+  ::-webkit-input-placeholder {
+    /* Webkit */
+    font-size: 1.4rem;
+  }
+
+  :-moz-placeholder {
+    /* Firefox 18-4 */
+    font-size: 1.4rem;
+  }
+
+  ::-moz-placeholder {
+    /* Firefox 19+ */
+    font-size: 1.4rem;
+  }
+
+  :-ms-input-placeholder {
+    /*  IE10+  */
+    font-size: 1.4rem;
+  }
 }
