--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -1,98 +1,115 @@
-:root{
-
---main-drop-shadow: drop-shadow(10px 40px 30px rgba(0, 0, 0, 0.75));
---main-box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.25);
+:root {
+  --main-drop-shadow: drop-shadow(10px 40px 30px rgba(0, 0, 0, 0.75));
+  --main-box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.25);
 }
-
 
 /* mukta-regular - latin */
 @font-face {
-    font-family: 'Mukta';
-    font-style: normal;
-    font-weight: 400;
-    src: url('../fonts/mukta-v7-latin-regular.eot'); /* IE9 Compat Modes */
-    src: local(''),
-         url('../fonts/mukta-v7-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/mukta-v7-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/mukta-v7-latin-regular.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/mukta-v7-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/mukta-v7-latin-regular.svg#Mukta') format('svg'); /* Legacy iOS */
-  }
-  /* mukta-500 - latin */
-  @font-face {
-    font-family: 'Mukta';
-    font-style: normal;
-    font-weight: 500;
-    src: url('../fonts/mukta-v7-latin-500.eot'); /* IE9 Compat Modes */
-    src: local(''),
-         url('../fonts/mukta-v7-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/mukta-v7-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/mukta-v7-latin-500.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/mukta-v7-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/mukta-v7-latin-500.svg#Mukta') format('svg'); /* Legacy iOS */
-  }
-  /* mukta-700 - latin */
-  @font-face {
-    font-family: 'Mukta';
-    font-style: normal;
-    font-weight: 700;
-    src: url('../fonts/mukta-v7-latin-700.eot'); /* IE9 Compat Modes */
-    src: local(''),
-         url('../fonts/mukta-v7-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/mukta-v7-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/mukta-v7-latin-700.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/mukta-v7-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/mukta-v7-latin-700.svg#Mukta') format('svg'); /* Legacy iOS */
-  }
-  /* mukta-800 - latin */
-  @font-face {
-    font-family: 'Mukta';
-    font-style: normal;
-    font-weight: 800;
-    src: url('../fonts/mukta-v7-latin-800.eot'); /* IE9 Compat Modes */
-    src: local(''),
-         url('../fonts/mukta-v7-latin-800.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/mukta-v7-latin-800.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/mukta-v7-latin-800.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/mukta-v7-latin-800.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/mukta-v7-latin-800.svg#Mukta') format('svg'); /* Legacy iOS */
-  }
-  
-html, body{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-size: 10px;
-    font-family: 'Mukta', Helvetica, sans serif;
-    color: #1B4356;
+  font-family: "Mukta";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/mukta-v7-latin-regular.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("../fonts/mukta-v7-latin-regular.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/mukta-v7-latin-regular.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("../fonts/mukta-v7-latin-regular.woff")
+      format("woff"),
+    /* Modern Browsers */ url("../fonts/mukta-v7-latin-regular.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */ url("../fonts/mukta-v7-latin-regular.svg#Mukta")
+      format("svg"); /* Legacy iOS */
+}
+/* mukta-500 - latin */
+@font-face {
+  font-family: "Mukta";
+  font-style: normal;
+  font-weight: 500;
+  src: url("../fonts/mukta-v7-latin-500.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("../fonts/mukta-v7-latin-500.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/mukta-v7-latin-500.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("../fonts/mukta-v7-latin-500.woff")
+      format("woff"),
+    /* Modern Browsers */ url("../fonts/mukta-v7-latin-500.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */ url("../fonts/mukta-v7-latin-500.svg#Mukta")
+      format("svg"); /* Legacy iOS */
+}
+/* mukta-700 - latin */
+@font-face {
+  font-family: "Mukta";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/mukta-v7-latin-700.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("../fonts/mukta-v7-latin-700.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/mukta-v7-latin-700.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("../fonts/mukta-v7-latin-700.woff")
+      format("woff"),
+    /* Modern Browsers */ url("../fonts/mukta-v7-latin-700.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */ url("../fonts/mukta-v7-latin-700.svg#Mukta")
+      format("svg"); /* Legacy iOS */
+}
+/* mukta-800 - latin */
+@font-face {
+  font-family: "Mukta";
+  font-style: normal;
+  font-weight: 800;
+  src: url("../fonts/mukta-v7-latin-800.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("../fonts/mukta-v7-latin-800.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/mukta-v7-latin-800.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("../fonts/mukta-v7-latin-800.woff")
+      format("woff"),
+    /* Modern Browsers */ url("../fonts/mukta-v7-latin-800.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */ url("../fonts/mukta-v7-latin-800.svg#Mukta")
+      format("svg"); /* Legacy iOS */
 }
 
-ul, ol{
-    list-style: none;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 10px;
+  font-family: "Mukta", Helvetica, sans serif;
+  color: #1b4356;
 }
 
-a{
-    text-decoration: none;
-    color: #005e8a;
-    font-weight: 500;
+ul,
+ol {
+  list-style: none;
 }
 
-img{
-    border-radius: 4px;
+a {
+  text-decoration: none;
+  color: #00121b;
+  font-weight: 500;
 }
 
-input, button{
-font-family: 'Mukta', Helvetica, sans serif;
+a:hover {
+  color: #ff8c22;
 }
 
-footer{
-    position: relative;
-    box-sizing: border-box;
-    width: 100%;
-    background-color: #a1bbc7;
-    text-align: center;
-    font-size: 1.5rem;
-    padding: 10px;
-    margin-top: 75px;
+img {
+  border-radius: 4px;
 }
 
+input,
+button {
+  font-family: "Mukta", Helvetica, sans serif;
+}
+
+footer {
+  position: relative;
+  box-sizing: border-box;
+  width: 100%;
+  background-color: #a1bbc7;
+  text-align: center;
+  font-size: 1.5rem;
+  padding: 10px;
+  margin-top: 75px;
+}
