--- a/styles/queries.css
+++ b/styles/queries.css
@@ -4,7 +4,7 @@
     height: 550px;
   }
   section {
-    width:  425px;
+    width: 425px;
   }
 
   .text-wrapper__heading {
@@ -19,7 +19,7 @@
     font-size: 2.6rem;
   }
 
-  .about-section__img{
+  .about-section__img {
     width: 175px;
   }
 
@@ -69,7 +69,7 @@
     margin-top: 15px;
   }
 
-  .about-section__img{
+  .about-section__img {
     min-width: 125px;
   }
 
@@ -110,6 +110,10 @@
     margin: 15px 0;
   }
 
+  .contact-section {
+    margin-top: 100px;
+  }
+
   .contact-section__heading {
     font-size: 2.4rem;
     margin-top: -28px;
@@ -147,5 +151,13 @@
   :-ms-input-placeholder {
     /*  IE10+  */
     font-size: 1.4rem;
+  }
+
+
+
+  /* form animations overwrite*/
+  flip {
+    -webkit-animation-name: none;
+    animation-name: none;
   }
 }
