--- a/styles/scrollbar.css
+++ b/styles/scrollbar.css
@@ -1,20 +1,20 @@
 /* Works on Firefox */
 * {
     scrollbar-width: 16px;
-    scrollbar-color: #a1bbc7 orange;
+    scrollbar-color: #a1bbc7 rgb(255, 255, 255);
   }
   
   /* Works on Chrome, Edge, and Safari */
   *::-webkit-scrollbar {
-    width: 16px;
+    width: 18px;
   }
   
   *::-webkit-scrollbar-track {
-    background: orange;
+    background: rgb(255, 255, 255);
   }
   
   *::-webkit-scrollbar-thumb {
-    background-color: blue;
-    border-radius: 20px;
-    border: 3px solid #a1bbc7;;
+    background-color: #a1bbc7;
+    border-radius: 6px;
+    border: 2px solid #ffffff;
   }
