--- a/styles/queries.css
+++ b/styles/queries.css
@@ -138,7 +138,7 @@
     font-size: 1.4rem;
   }
 
-  :-moz-placeholder {
+  ::-moz-placeholder {
     /* Firefox 18-4 */
     font-size: 1.4rem;
   }
@@ -148,7 +148,7 @@
     font-size: 1.4rem;
   }
 
-  :-ms-input-placeholder {
+  -ms-input-placeholder {
     /*  IE10+  */
     font-size: 1.4rem;
   }
